// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find reset points correctly 1`] = `
Array [
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`merge reset correctly 1`] = `
Array [
  Object {
    "blockNumber": 111,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 1000,
    "transactionHash": "aaa",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 2,
    "price": 123,
    "timestamp": 2000,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 0.25,
    "price": 123,
    "timestamp": 3000,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1.1,
    "navB": 1,
    "price": 123,
    "timestamp": 4000,
    "transactionHash": "ddd",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`mergePrices 1`] = `
Array [
  Object {
    "base": "base",
    "close": 2,
    "high": 3,
    "low": 0,
    "open": 1,
    "period": 180,
    "quote": "quote",
    "source": "source",
    "timestamp": 1528243200000,
    "volume": 246,
  },
]
`;

exports[`minutely merged correctly to 5 minute bar 1`] = `
Array [
  Object {
    "base": "base",
    "close": 2,
    "high": 3,
    "low": 0,
    "open": 1,
    "period": 5,
    "quote": "quote",
    "source": "source",
    "timestamp": 1528243200000,
    "volume": 369,
  },
]
`;
